--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginHandler"
+            android:label="@string/title_activity_login_handler"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MainMenuHandler"
+            android:label="@string/title_activity_main_menu_handler"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
