--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.albinskola.fitnessproject">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -25,6 +26,7 @@
             android:name=".MainMenuHandler"
             android:label="@string/title_activity_main_menu_handler"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".AddWorkoutHandler"></activity>
     </application>
 
 </manifest>
