--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,11 @@
             android:name=".MainMenuHandler"
             android:label="@string/title_activity_main_menu_handler"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AddWorkoutHandler"></activity>
+        <activity
+            android:name=".AddWorkoutHandler"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+
     </application>
 
 </manifest>
