Made new activity for signing up a new user. Also made a method for adding new user in the DbConnecter. The shit works perfectly on first try ggwp.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,11 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AddWorkoutHandler"
-            android:theme="@style/AppTheme.NoActionBar"
-            />
-
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SignupHandler"
+            android:label="@string/title_activity_signup_handler"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
