--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity
             android:name=".SignupHandler"
             android:label="@string/title_activity_signup_handler"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".ViewWorkoutHandler"/>
     </application>
 
 </manifest>
