Changed classname from Workout to WorkoutObject. Changed some variables to workoutObject in different classes.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile files('src/libs/mysql-connector-java-3.0.17-ga-bin.jar')
     compile files('src/libs/GraphView-4.0.1.jar')
+    compile files('libs/GraphView-4.0.1.jar')
 }
